# hcad

./: .cache.db  .editorconfig  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  success.json  tox.ini  urls.hcad.org.txt
.github/workflows/: pythonpackage.yml
hcad/: __init__.py  __main__.py  cli.py  core.py  etl.py  functions.py  settings.py
hcad/etl/: main.py  services.py  settings.py
hcad/etl/jobs/: land.py  release.py  stage.py
hcad/etl/sparkjobs/: hearing_files.py
resources/: urls.txt
tests/: test_etl.py  test_functions.py  test_hcad.py
tests/resources/: urls.txt
tests/samples/: Layout_and_Length.txt  sample.1000.arb_hearings_pp.txt  sample.1000.arb_hearings_real.txt  sample.1000.arb_protest_pp.txt  sample.1000.arb_protest_real.txt
tests/samples/txt/: sample.1000.arb_hearings_pp.txt  sample.1000.arb_hearings_pp.txt.tgz  sample.1000.arb_hearings_real.txt  sample.1000.arb_protest_pp.txt  sample.1000.arb_protest_real.txt
tests/test_hcad/: test_etl.py
work/: ETL.ipynb  File Compression.ipynb  Joining and Unions.ipynb  PurePython.ipynb  Pyspark.ipynb  Schemas.ipynb  SparkMagic.ipynb  Test Setup.ipynb  docker-compose.yml  hcad.cfg  main.py  main01.py
work/ddl/Hearing_files/: arb_hearings_real.json  arb_protest_real.json.json
work/samples/: Layout_and_Length.txt
