[metadata]
name = hcad
long_description = file: README.md
long_description_content_type = text/markdown
license = proprietary
license_file = LICENSE
url = https://github.com/zack-wilson/hcad.git

[options]
include_package_data = True
zip_safe = False
packages = find:
install_requires =
    requests
scripts =
    bin/hcad-land.sh
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    hcad=hcad.__main__:execute
