[metadata]
name = hcad
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zack-wilson/hcad.git
author = Zachary Wilson
author_email = wilsonze@gmail.com
license = proprietary
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    requests
python_requires = >=3.6
include_package_data = True
scripts =
    bin/hcad-land.sh
setup_requires =
    setuptools_scm
zip_safe = False

[options.entry_points]
console_scripts =
    hcad=hcad.__main__:execute

[options.package_data]
samples = tests/samples/txt/*.gz

[options.packages.find]
where =
    hcad
