[metadata]
name = hcad
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zack-wilson/hcad.git
author = Zachary Wilson
author_email = wilsonze@gmail.com
license = proprietary
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    click
    requests
python_requires = >=3.6
include_package_data = True
scripts =
    bin/_hcad_bootstrap.sh
    bin/_hcad_compress.sh
    bin/_hcad_land.sh
setup_requires =
    flake8
    isort
zip_safe = False

[options.entry_points]
console_scripts =
    hcad=hcad.__main__:main

[options.package_data]
resources =
    resources/*.txt

[options.packages.find]
where =
    hcad

[options.data_files]
samples =
    tests/samples/sample.zip
    tests/samples/sample.1000.arb_hearings_pp.txt
    tests/samples/sample.1000.arb_hearings_real.txt
    tests/samples/sample.1000.arb_protest_pp.txt
    tests/samples/sample.1000.arb_protest_real.txt
